@@ -1,3 +1,9 @@
+Wed Jun  4 14:17:31 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * dds/InfoRepo/FederatorConfig.cpp:
+
+          Fixing wide character build errors.
+
 Tue Jun  3 21:43:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * dds/InfoRepo/FederatorConfig.cpp:
